# eleflow

./: .env  READEME.md  README.md  carga.ipynb  docker-compose.yml  exploracao.ipynb  pyproject.toml  requirements.txt
raw/: Processo Seletivo - Engenheiro de Dados - Eleflow.pptx
