[tool.poetry]
name = "eleflow"
version = "0.1.0"
description = ""
authors = ["Rodrigo Cristiano"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.5.0"
pandas = "^1.2.3"
openpyxl = "^3.0.7"
SQLAlchemy = "^1.4.3"
python-decouple = "^3.4"
psycopg2 = "^2.8.6"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
